# src/api/auth/auth.ctrl.js
@@ -1,0 +1,12 @@
+import post__sendCode from "./post__sendcode.js";
+import post__verifyCode from "./post__verifyCode.js";
+export default {
+  post: {
+    sendCode: post__sendCode,
+    verifyCode: post__verifyCode,
+  },
+  get: {},
+  put: {},
+  delete: {},
+  patch: {},
+};
